<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveWithDataActivity">
    <TextView
        android:id="@+id/tv_congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/move_with_data_congrats"/>
    <TextView
        android:id="@+id/tv_username_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_congrats"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/username_title"/>
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username_title"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textAlignment="center"
        android:text="@string/username_title"/>
    <TextView
        android:id="@+id/tv_postal_code_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/postal_code_title"/>
    <TextView
        android:id="@+id/tv_postal_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_postal_code_title"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:textAlignment="center"
        android:text="@string/postal_code_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>